# opencv-mobile-rs

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  wrapper.c  wrapper.cpp
src/: lib.rs
tests/: core.rs  features2d.rs  highgui.rs  imgproc.rs  photo.rs  put_text_test.rs  video.rs
